--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
 <meta charset="UTF-8">
 <title>Super Snake 3000</title>
+
 <script type="text/javascript" src="snake.js"></script>
 </head>
 <body>
 <canvas id="viewport" width="640" height="480"></canvas>
+<h1 id="score">Score: 0</h1>
+</div>
+
+
+
 </body>
 </html> 
