--- a/game.html
+++ b/game.html
@@ -2,19 +2,24 @@
 <div class="menu">
     <h1 class="title">Super Snake 3000</h1>
     <ul>
-    <li class="button button--start" id="start">Start</li>
-    <form class="radio radio--difficulty" id="settings">
-        <input type="radio" name="diff" value="Easy" > Easy
+    <li  class="button button--start" id="start" onclick=send()>Start </li>
+    <form action="index.html" class="radio radio--difficulty" id="settings" method="GET">
+        Map Difficulty
+        <br><input type="radio" name="diff" value="Easy" > Easy
         <input type="radio" name="diff" value="Medium"> Medium
         <input type="radio" name="diff" value="Hard"> Hard
-    </form>
-    <form class="radio radio--speed" id="settings">
-        <input type="radio" name="speed" value="Easy" > Easy
+
+        <br>Snake Speed
+        <br><input type="radio" name="speed" value="Easy" > Easy
         <input type="radio" name="speed" value="Medium"> Medium
         <input type="radio" name="speed" value="Hard"> Hard
+        <br><br>Insert name
+        <input type="text" id="name" name="name">
+
     </form>
     <li onclick="window.location.href='scores.html'" class="button button--scores">Scores</li>
     </ul>
+    <p id="demo"></p>
 </div>
 </body>
 
@@ -48,7 +53,7 @@
     .radio {
     list-style: none;
     width: 250px;
-    height: 48px;
+    height: 200px;
     line-height: 48px;
     text-align: center;
     position: absolute;
@@ -78,21 +83,20 @@
     top: 250px;
     }
     .radio--difficulty {
-    top: 350px;
+    top: 250px;
     }
     .button--start {
-    top: 450px;
+    top: 600px;
     }
 
 </style>
 
 <script>
 
-    var form = document.getElementById("settings");
-        document.getElementById("start").addEventListener("click", function () {
-        form.submit();
-        console.log("paskapersehomo");
-    });
+function send() {
+  document.getElementById("settings").submit();
+  
+}
 
 </script>
 
