--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 <canvas id="viewport" width="640" height="480"></canvas>
 <h1 id="score">Score: 0</h1>
+<h1 id="highscore">Highscore: 0</h1>
 </div>
 
 
