--- a/game.html
+++ b/game.html
@@ -6,12 +6,12 @@
     <form action="index.html" class="radio radio--difficulty" id="settings" method="GET">
         Map Difficulty
         <br><input type="radio" name="diff" value="Easy" > Easy
-        <input type="radio" name="diff" value="Medium"> Medium
+        <input type="radio" name="diff" value="Medium" checked> Medium
         <input type="radio" name="diff" value="Hard"> Hard
 
         <br>Snake Speed
-        <br><input type="radio" name="speed" value="Easy" > Easy
-        <input type="radio" name="speed" value="Medium"> Medium
+        <br><input type="radio" name="speed" value="Easy"> Easy
+        <input type="radio" name="speed" value="Medium" checked> Medium
         <input type="radio" name="speed" value="Hard"> Hard
 
     </form>
