--- a/index.html
+++ b/index.html
@@ -8,9 +8,18 @@
 </head>
 <body>
 <canvas id="viewport" width="640" height="480"></canvas>
+<div>
 <h1 id="score">Score: 0</h1>
 <h1 id="highscore">Highscore: 0</h1>
 </div>
+<style>
+    div {
+      background-color: lightgrey;
+      width: 510px;
+      border: 15px solid green;
+      padding: 50px;
+    }
+    </style>
 
 
 
