--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
 <canvas id="viewport" width="640" height="480"></canvas>
 <canvas id="foreground" width="640" height="560"></canvas>
+<canvas id="stareffect" width="640" height="560"></canvas>
+
 <div id ="score-div">
 <h1 id="score">Score: 0</h1>
 <h1 id="highscore">Highscore: 0</h1>
